--- a/src/app/views/booking/booking.component.html
+++ b/src/app/views/booking/booking.component.html
@@ -24,12 +24,12 @@
                             <div class="col-lg-6">
                                 <button type="button" class="btn btn-outline-warning w-100"
                                     [ngClass]="{'active':item.isPrefer,'inactive':!item.isPrefer}"
-                                    (click)="setActiveSubItem(i)"><strong>{{item.itemName}}</strong>
+                                    (click)="setActiveSubItem(item,i)"><strong>{{item.itemName}}</strong>
                                 </button>
                             </div>
                             <div class="col-lg-6 align-self-center">
-                                <h6 class="pricing">{{currency}}
-                                    {{calculatePrice(item.unitPrice,item.minutes,item.unitOfMeasure)}}</h6>
+                                <h6 class="pricing">
+                                    {{config.currency}} {{calculateHourlyPrice(item.unitPrice,item.minutes,item.unitOfMeasure)}}</h6>
                                 <p>{{item.subTitle}}</p>
                             </div>
                         </div>
@@ -44,7 +44,9 @@
                     <div class="order-summary">
                         <div class="px-4 pt-4 pb-1">
                             <div class="d-flex justify-content-between mb-4">
-                                <h5 class="mb-0 fw-bold">{{currency}} 85.00</h5>
+                                <h5 class="mb-0 fw-bold">
+                                    {{config.currency}} {{orderSummary.grandTotal | number : '1.2-2'}}
+                                </h5>
                                 <p class="mb-0 text-warning">Hide Order Summary <i class="bi bi-chevron-up "></i></p>
                             </div>
                             <button type="button" class="btn btn-warning w-100 text-white fw-bold">Proceed to Book <i
@@ -55,16 +57,25 @@
                         <div class="px-4 pb-4">
                             <div
                                 class="bg-warning bg-opacity-10 rounded-1 border border-1 d-flex justify-content-between p-2 mb-2">
-                                <p class="mb-2 ">1 Cleaner, 2 hours + 30 mins</p>
-                                <p class="mb-2 ">{{currency}} 85.00</p>
+                                <p class="mb-2" *ngIf="booking.data.items.length>0">
+                                    {{booking.data.items[activeIndex].displayText ||0}}
+                                    Cleaner, {{orderSummary.itemName}}
+                                </p>
+                                <p class="mb-2 ">
+                                    {{config.currency}} {{orderSummary.total| number : '1.2-2'}}
+                                </p>
                             </div>
                             <div class="d-flex justify-content-between">
                                 <p class="mb-1">Sub Total</p>
-                                <p class="fw-bold mb-1">{{currency}} 85.00</p>
+                                <p class="fw-bold mb-1">
+                                    {{config.currency}} {{orderSummary.total | number : '1.2-2'}}
+                                </p>
                             </div>
                             <div class="d-flex justify-content-between">
-                                <p class="mb-1">Total (Inclusive 5% VAT)</p>
-                                <p class="fw-bold mb-1">{{currency}} 85.00</p>
+                                <p class="mb-1">Total (Inclusive {{config.vatPercentage}}% VAT)</p>
+                                <p class="fw-bold mb-1">
+                                    {{config.currency}} {{orderSummary.grandTotal | number :'1.2-2'}}
+                                </p>
                             </div>
                         </div>
                     </div>
