--- a/src/app/views/booking/booking.component.html
+++ b/src/app/views/booking/booking.component.html
@@ -25,7 +25,7 @@
                             <ngx-skeleton-loader *ngIf="isLoading" count="1"
                                 [theme]="{ 'border-radius': '4px',margin:'0 12px 5px 0',height:'20px'}"></ngx-skeleton-loader>
                         </div>
-                        <div class="row slot-time mb-2"
+                        <div class="row time-slot mb-2"
                             *ngFor="let item of booking.data.items[activeIndex]?.items || []; let i=index;">
                             <div class="col-lg-6">
                                 <button type="button" class="btn btn-outline-warning w-100"
@@ -64,36 +64,43 @@
                                 <h5 class="mb-0 fw-bold">
                                     {{config.currency}} {{orderSummary.grandTotal | number : '1.2-2'}}
                                 </h5>
-                                <p class="mb-0 text-warning">Hide Order Summary <i class="bi bi-chevron-up "></i></p>
+                                <p class="mb-0 text-warning c-pointer" (click)="showSummary=!showSummary">{{showSummary?'Hide':'Show'}} Order
+                                    Summary <i
+                                        [ngClass]="{'bi bi-chevron-up':showSummary,'bi bi-chevron-down':!showSummary}"></i>
+                                </p>
                             </div>
                             <button type="button" class="btn btn-warning w-100 text-white fw-bold">Proceed to Book <i
                                     class="bi bi-chevron-right float-end"></i>
                             </button>
                         </div>
-                        <hr class="divider">
-                        <div class="px-4 pb-4">
-                            <div
-                                class="bg-warning bg-opacity-10 rounded-1 border border-1 d-flex justify-content-between p-2 mb-2">
-                                <p class="mb-2" >
-                                    {{orderSummary.count}} Cleaner, {{orderSummary.itemName}}
-                                </p>
-                                <p class="mb-2 ">
-                                    {{config.currency}} {{orderSummary.total| number : '1.2-2'}}
-                                </p>
+                        <ng-container>
+                            <hr class="divider">
+                            <div class="px-4 pb-4" *ngIf="showSummary">
+                                <div
+                                    class="bg-warning bg-opacity-10 rounded-1 border border-1 d-flex justify-content-between p-2 mb-2">
+                                    <p class="mb-3" *ngIf="booking.data.items.length>0">
+                                        {{booking.data.items[activeIndex].count ||0}}
+                                        Cleaner, {{orderSummary.itemName}}
+                                    </p>
+                                    <p class="mb-2 ">
+                                        {{config.currency}} {{orderSummary.total| number : '1.2-2'}}
+                                    </p>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <p class="mb-1">Sub Total</p>
+                                    <p class="fw-bold mb-1">
+                                        {{config.currency}} {{orderSummary.total | number : '1.2-2'}}
+                                    </p>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <p class="mb-1">Total (Inclusive {{config.vatPercentage}}% VAT)</p>
+                                    <p class="fw-bold mb-1">
+                                        {{config.currency}} {{orderSummary.grandTotal | number :'1.2-2'}}
+                                    </p>
+                                </div>
                             </div>
-                            <div class="d-flex justify-content-between">
-                                <p class="mb-1">Sub Total</p>
-                                <p class="fw-bold mb-1">
-                                    {{config.currency}} {{orderSummary.total | number : '1.2-2'}}
-                                </p>
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <p class="mb-1">Total (Inclusive {{config.vatPercentage}}% VAT)</p>
-                                <p class="fw-bold mb-1">
-                                    {{config.currency}} {{orderSummary.grandTotal | number :'1.2-2'}}
-                                </p>
-                            </div>
-                        </div>
+                        </ng-container>
+
                     </div>
                 </div>
             </div>
