--- a/src/app/views/booking/booking.component.html
+++ b/src/app/views/booking/booking.component.html
@@ -71,7 +71,7 @@
                                 </p>
                             </div>
                             <button type="button" class="btn btn-warning w-100 text-white fw-bold"
-                                (click)="book()">Proceed to Book <i class="bi bi-chevron-right float-end"></i>
+                                (click)="bookService()">Proceed to Book <i class="bi bi-chevron-right float-end"></i>
                             </button>
                         </div>
                         <ng-container>
