--- a/src/app/views/booking/booking.component.scss
+++ b/src/app/views/booking/booking.component.scss
@@ -7,7 +7,7 @@
     width: 19%;
 }
 
-.c-pointer{
+.c-pointer {
     cursor: pointer;
 }
 
@@ -64,5 +64,36 @@
     .divider {
         border: 1px solid #afafaf;
         ;
+    }
+}
+
+// Mobile Styles
+@media only screen and (max-width: 767px) {
+    .container-fluid {
+        padding: 1rem;
+        .slot-item{
+            .btn-outline-warning{
+                margin-bottom: 10px;
+            }
+        }
+        .time-slot{
+            .btn-outline-warning{
+                margin: 10px 0;
+            }
+        }
+    }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .container-fluid {
+        padding: 1rem;
+    }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 1024px) {
+    .container-fluid {
+        padding: 3rem;
     }
 }
