--- a/src/app/views/booking/booking.component.html
+++ b/src/app/views/booking/booking.component.html
@@ -13,13 +13,33 @@
                         </div>
                         <div class="slot-item mb-4">
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 pe-0" *ngFor="let item of booking.data.items; let i=index;">
+                                <div class="col-lg-3 col-md-3 pe-0"
+                                    *ngFor="let item of booking.data.items; let i=index;">
                                     <button type="button" class="btn btn-outline-warning w-100"
                                         [ngClass]="{'active':item.selected,'inactive':!item.selected}"
                                         [disabled]="!item.isActive" (click)="setActiveItem(i)">
                                         <img [src]="item.image" alt="person.jpg"
                                             class="me-1"><strong>{{item.displayText}}</strong>
                                     </button>
+                                </div>
+                            </div>
+                            <div class="row mt-3" *ngIf="!isLoading">
+                                <div class="col-lg-4">
+                                    <label for="fromDate">{{booking.data.endDate ? 'From':''}} Date</label>
+                                    <input id="fromDate" class="form-control" type="date" [min]="currentDate"
+                                        [(ngModel)]="booking.data.fromDate" />
+                                </div>
+                                <div class="col-lg-auto form-check align-self-center mt-4">
+                                    <input class="form-check-input" type="checkbox" [(ngModel)]="booking.data.endDate"
+                                        id="flexCheckDefault" (change)="setEndDate($event)">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        End Date
+                                    </label>
+                                </div>
+                                <div class="col-lg-4" *ngIf="booking.data.endDate">
+                                    <label for="toDate">To Date</label>
+                                    <input id="toDate" class="form-control" type="date" [min]="booking.data.fromDate"
+                                        [(ngModel)]="booking.data.toDate" />
                                 </div>
                             </div>
                         </div>
@@ -80,15 +100,18 @@
                         <ng-container>
                             <hr class="divider">
                             <div class="px-4 pb-4" *ngIf="showSummary">
-                                <div
-                                    class="bg-warning bg-opacity-10 rounded-1 border border-1 d-flex justify-content-between p-2 mb-2">
-                                    <p class="mb-3" *ngIf="booking.data.items.length>0">
-                                        {{booking.data.items[activeIndex].count ||0}}
-                                        Cleaner, {{orderSummary.itemName}}
-                                    </p>
-                                    <p class="mb-2 ">
-                                        {{config.currency}} {{orderSummary.total| number : '1.2-2'}}
-                                    </p>
+                                <div class="bg-warning bg-opacity-10 rounded-1 border border-1 p-2 mb-2">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="m-0" *ngIf="booking.data.items.length>0">
+                                            {{booking.data.items[activeIndex].count ||0}}
+                                            Cleaner, {{orderSummary.itemName}}
+                                        </p>
+                                        <p class="m-0 ">
+                                            {{config.currency}} {{orderSummary.total| number : '1.2-2'}}
+                                        </p>
+                                    </div>
+                                    <div class="fs-6">Date : {{booking.data.fromDate}} {{booking.data.endDate ? '/ '
+                                        + booking.data.toDate :''}}</div>
                                 </div>
                                 <div class="d-flex justify-content-between">
                                     <p class="mb-1">Sub Total</p>
